# Letin

./: .gitignore  CMakeLists.txt  Letin.kdev4  README.md  path_util.hpp  util.hpp
.kdev4/: Letin.kdev4  _custom.kdev4
cmake/: FindPANDOC.cmake
comp/: CMakeLists.txt  comp.cpp  driver.cpp  driver.hpp  impl_comp.cpp  impl_comp.hpp  impl_prog.cpp  impl_prog.hpp  lexer.hpp  lexer.lpp  num_value.cpp  num_value.hpp  parse_tree.cpp  parse_tree.hpp  parser.ypp
doc/: CMakeLists.txt  format.md  lang.md  template.html  vm.md
examples/: collatz.letins  fib.letins  hello.letins  math.letins  phello.letins  uackermann.letins  ucollatz.letins  ufib.letins  uhello.letins  usqrt.letins
examples/posix/: cat.letins  dir.letins  env.letins  errno.letins  execve.letins  fork.letins  fork_execve.letins  gettimeofday.letins  head1k.letins  nanosleep.letins  pwd.letins  sleep.letins  stat.letins  uname.letins
examples/socket/: client.letins  getaddrinfo.letins  getnameinfo.letins  server.letins
include/letin/: comp.hpp  const.hpp  format.hpp  native.hpp  opcode.hpp  vm.hpp
letin/: CMakeLists.txt  main.cpp
letinc/: CMakeLists.txt  main.cpp
nlib/: CMakeLists.txt
nlib/posix/: CMakeLists.txt  dir.cpp  dir.hpp  native_lib.cpp  posix.cpp  posix.hpp  posix_errno.cpp
nlib/socket/: CMakeLists.txt  native_lib.cpp  socket.cpp  socket.hpp
test/: CMakeLists.txt
test/comp/: CMakeLists.txt  comp_tests.cpp  comp_tests.hpp  fs_util.cpp  fs_util.hpp  helper.cpp  helper.hpp  main.cpp
test/vm/: CMakeLists.txt  alloc_wrapper.cpp  alloc_wrapper.hpp  gc_tests.cpp  gc_tests.hpp  hash_table_tests.cpp  hash_table_tests.hpp  helper.cpp  helper.hpp  main.cpp  native_helper_tests.cpp  native_helper_tests.hpp  registered_ref_tests.cpp  registered_ref_tests.hpp  vm_tests.cpp  vm_tests.hpp
vm/: CMakeLists.txt  dyn_lib.cpp  dyn_lib.hpp  hash.cpp  hash_table.hpp  impl_env.cpp  impl_env.hpp  impl_gc_base.cpp  impl_gc_base.hpp  impl_loader.cpp  impl_loader.hpp  impl_nfh_loader.cpp  impl_nfh_loader.hpp  impl_vm_base.cpp  impl_vm_base.hpp  native.cpp  new.cpp  priv.cpp  priv.hpp  sem.hpp  thread.cpp  thread.hpp  thread_stop_cont.cpp  thread_stop_cont.hpp  vm.cpp  vm.hpp
vm/alloc/: new_alloc.cpp  new_alloc.hpp
vm/cache/: ht_memo_cache.cpp  ht_memo_cache.hpp
vm/gc/: mark_sweep_gc.cpp  mark_sweep_gc.hpp
vm/strategy/: eager_eval_strategy.cpp  eager_eval_strategy.hpp  fun_eval_strategy.cpp  fun_eval_strategy.hpp  lazy_eval_strategy.cpp  lazy_eval_strategy.hpp  memo_eval_strategy.cpp  memo_eval_strategy.hpp  memo_lazy_eval_strategy.cpp  memo_lazy_eval_strategy.hpp
vm/vm/: interp_vm.cpp  interp_vm.cpp.orig  interp_vm.hpp
