include_directories("${CMAKE_CURRENT_SOURCE_DIR}")

include(CheckTypeSize)
include(CheckStructHasMember)
include(CheckFunctionExists)

if(NOT "${CMAKE_SYSTEM_NAME}" STREQUAL "Windows")
	set(CMAKE_REQUIRED_DEFINITIONS "-D_LARGEFILE64_SOURCE=1")
	set(CMAKE_EXTRA_INCLUDE_FILES "sys/stat.h" "fcntl.h")
	check_type_size("off64_t" OFF64_T)
	check_type_size("struct flock64" STRUCT_FLOCK64)
	check_type_size("struct stat64" STRUCT_STAT64)

	check_struct_has_member("struct stat" st_atim "sys/stat.h" HAVE_STRUCT_STAT_ATIM)
	check_struct_has_member("struct stat" st_ctim "sys/stat.h" HAVE_STRUCT_STAT_MTIM)
	check_struct_has_member("struct stat" st_mtim "sys/stat.h" HAVE_STRUCT_STAT_CTIM)
	if(HAVE_STRUCT_STAT64)
		check_struct_has_member("struct stat64" st_atim "sys/stat.h" HAVE_STRUCT_STAT64_ATIM)
		check_struct_has_member("struct stat64" st_ctim "sys/stat.h" HAVE_STRUCT_STAT64_MTIM)
		check_struct_has_member("struct stat64" st_mtim "sys/stat.h" HAVE_STRUCT_STAT64_CTIM)
	endif(HAVE_STRUCT_STAT64)

	check_function_exists(lseek64 HAVE_LSEEK64)
	check_function_exists(open64 HAVE_OPEN64)
	check_function_exists(stat64 HAVE_STAT64)
	check_function_exists(lstat64 HAVE_LSTAT64)
	check_function_exists(fstat64 HAVE_FSTAT64)
	set(CMAKE_REQUIRED_DEFINITIONS)
	set(CMAKE_EXTRA_INCLUDE_FILES)

	if(HAVE_OFF64_T)
		add_definitions(-DHAVE_OFF64_T)
	endif(HAVE_OFF64_T)
	if(HAVE_STRUCT_FLOCK64)
		add_definitions(-DHAVE_STRUCT_FLOCK64)
	endif(HAVE_STRUCT_FLOCK64)
	if(HAVE_STRUCT_STAT64)
		add_definitions(-DHAVE_STRUCT_STAT64)
	endif(HAVE_STRUCT_STAT64)

	if(HAVE_STRUCT_STAT_ATIM)
		add_definitions(-DHAVE_STRUCT_STAT_ATIM)
	endif(HAVE_STRUCT_STAT_ATIM)
	if(HAVE_STRUCT_STAT_MTIM)
		add_definitions(-DHAVE_STRUCT_STAT_MTIM)
	endif(HAVE_STRUCT_STAT_MTIM)
	if(HAVE_STRUCT_STAT_CTIM)
		add_definitions(-DHAVE_STRUCT_STAT_CTIM)
	endif(HAVE_STRUCT_STAT_CTIM)
	if(HAVE_STRUCT_STAT64)
		if(HAVE_STRUCT_STAT64_ATIM)
			add_definitions(-DHAVE_STRUCT_STAT64_ATIM)
		endif(HAVE_STRUCT_STAT64_ATIM)
		if(HAVE_STRUCT_STAT64_MTIM)
			add_definitions(-DHAVE_STRUCT_STAT64_MTIM)
		endif(HAVE_STRUCT_STAT64_MTIM)
		if(HAVE_STRUCT_STAT64_CTIM)
			add_definitions(-DHAVE_STRUCT_STAT64_CTIM)
		endif(HAVE_STRUCT_STAT64_CTIM)
	endif(HAVE_STRUCT_STAT64)

	if(HAVE_LSEEK64)
		add_definitions(-DHAVE_LSEEK64)
	endif(HAVE_LSEEK64)
	if(HAVE_OPEN64)
		add_definitions(-DHAVE_OPEN64)
	endif(HAVE_OPEN64)
	if(HAVE_STAT64)
		add_definitions(-DHAVE_STAT64)
	endif(HAVE_STAT64)
	if(HAVE_LSTAT64)
		add_definitions(-DHAVE_LSTAT64)
	endif(HAVE_LSTAT64)
	if(HAVE_FSTAT64)
		add_definitions(-DHAVE_FSTAT64)
	endif(HAVE_FSTAT64)

	add_definitions("-D_LARGEFILE64_SOURCE=1")
endif(NOT "${CMAKE_SYSTEM_NAME}" STREQUAL "Windows")

aux_source_directory("${CMAKE_CURRENT_SOURCE_DIR}" posix_sources)

add_library(posix MODULE ${posix_sources})
if("${CMAKE_SYSTEM_NAME}" STREQUAL "Windows")
	target_link_libraries(posix letinvm)
endif("${CMAKE_SYSTEM_NAME}" STREQUAL "Windows")

install(TARGETS posix DESTINATION lib/letin/nlib)
